dnl Initialize the mdemo package.
AC_INIT(main.c)
AM_INIT_AUTOMAKE(mdemo,0.1)

AC_PROG_CC
AC_C_CONST
AC_EXEEXT
AC_LIBTOOL_DLOPEN
AM_PROG_LIBTOOL

dnl AC_LIBLTDL_CONVENIENCE(['${top_builddir}/../libltdl'])
dnl Since the package is flat, we need not use the line above,
dnl and not having macros in LIBLTDL allows us to build LIBLTDL
dnl on demand even with broken makes
AC_LIBLTDL_CONVENIENCE(../libltdl)
AC_SUBST(LIBLTDL)

if ${CONFIG_SHELL} ./libtool --features | grep "enable static" >/dev/null; then
  STATIC=-static
else
  STATIC=
fi
AC_SUBST(STATIC)

AC_CHECK_HEADERS(math.h)

AC_CHECK_LIBM

dnl Output the makefile
AC_OUTPUT(Makefile)
