dnl Process this file with autoconf to create configure.

AC_INIT(main.c)
AM_INIT_AUTOMAKE(mdemo,0.1)

AC_PROG_CC
AC_C_CONST
AC_EXEEXT

AC_LIBLTDL_CONVENIENCE(../libltdl)
AC_SUBST(INCLTDL)
AC_SUBST(LIBLTDL)

AC_LIBTOOL_WIN32_DLL
AC_LIBTOOL_DLOPEN
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

AC_CHECK_HEADERS(math.h)

AC_CHECK_LIBM
AC_SUBST(LIBM)

dnl Output the makefile
AC_OUTPUT(Makefile)
